--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,8 +3,8 @@ NAME			=	libft.a
 PRINT_NAME		=	LIBFT
 
 #				Files
-SRCS		=	ft_putchar.c		ft_puthex.c			ft_puthexup.c		ft_putnbr_fd.c\
-				ft_putptr.c			ft_putunbr.c		ft_putstr.c\
+SRCS		=	ft_puthex.c			ft_puthexup.c		ft_putnbr_fd.c\
+				ft_putptr.c			ft_putunbr.c		ft_putstr.c			ft_putchar.c\
 	
 OBJS		=	${SRCS:.c=.o}
 
